--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 */24 * * *" # Esegui ogni 24 ore
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
