--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 */24 * * *" # Esegui ogni 24 ore
+    - cron: "0 0 * * *"  # Esegui una volta al giorno
   workflow_dispatch:
 
 permissions:
@@ -12,18 +12,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      
-      - uses: Platane/snk@master
+      - uses: actions/checkout@v3
+
+      - uses: Platane/snk@v3
         id: snake-gif
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: dist/github-contribution-grid-snake.svg
-          gif_out_path: dist/github-contribution-grid-snake.gif
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          days_count: 365
           
       - name: Push changes
-        uses: EndBug/add-and-commit@v7
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          branch: main
-          message: 'Generate Snake'
-          add: "dist"
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
